--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
+@import url("https://use.typekit.net/nxh1vzc.css");
+@layer base {
+    p, h1, h2, h3, h4, li, a, button {
+      font-family: 'futura-pt', sans-serif;
+    }
+  }
+
+  .hand-drawn{
+
+   /* font-family: 'mrstalwart-pro', sans-serif;
+font-weight: 400;
+font-size:90px;
+font-style: normal;*/
+  
+font-family: 'calgary-script-ot', sans-serif;
+font-weight: 400;
+font-style: normal;
+  }
+
+  .side-margins{
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 6.5rem;
+    padding-right: 6.5rem;
+    width: 100%;
+    max-width: 1000px;
+  }
+  @media screen and (max-width: 815px){
+  
+  .side-margins{
+    padding-left: 1.5rem;
+    padding-right: 1.5em;
+  }
+  }
+
+  
+  .linkOut{
+    text-decoration: underline solid;
+    color:aquamarine;
+    cursor:pointer
+  }
